# unxutils

./: README.md
bc-1.05/: Makefile  config.h  config.status
bison-1.28/: Makefile  Makefile.in  config.cache  config.h  config.status  mkinstalldirs
bzip2-0.9.0b/: MANUAL.HLP  bzip2.c  bzip2.pat  bzip2.ps  bzlib_private.h  dlltest.dsp  dlltest.dsw  dlltest.opt  libbz2.dsp  libbz2.dsw  libbz2.opt  makefile  makefile-sunos4  makefile.msc  manual.hpj  manual.ph  manual.rtf  sample1.bz2  sample1.tst  sample2.rb2  sample2.tst
bzip2-1.0.1/: bzip2.c  bzip2.html  mdiff
diffutils-2.7/: DIFF.HLP  Makefile.msc  cmp.c  config.h  config.h.min  config.status  diff.h  diff.hpj  diff.info  diff.info-1  diff.info-2  diff.info-3  diff.info-4  diff.ph  diff3.c  dir.c  makefile  makefile.min  readme.w32  sdiff.c  stamp-h  util.c  waitpid.c
file-4.02/: Makefile  config.h  config.status  libtool
fileutils-3.16/: acconfig.h  aclocal.m4  config.h  config.h.in  config.status  configure  makefile  makefile.am  makefile.in  readme  todo
flex-2.5.4/: FlexLexer.h  Makefile  Makefile.in  ccl.c  conf.in  config.cache  config.h  config.status  dfa.c  ecs.c  flex.htm  flex.skl  flexdef.h  gen.c  initscan.c  libmain.c  libyywrap.c  main.c  misc.c  nfa.c  parse.c  parse.y  scan.c  scan.l  skel.c  sym.c  tblcmp.c  yylex.c
fsplit/: copyright.txt  fsplit.1  fsplit.c  fsplit.os2.diff  fsplit.txt  makefile.os2
gawk-3.0.4/: awk.h  awk.y  awktab.c  builtin.c  eval.c  field.c  io.c
gsar110/: gsar.1  (+11 more)
id-utils-3.2d/: acconfig.h  aclocal.m4  changelog  config.h  config.h.in  config.status  configure  configure.in  makefile  makefile.am  makefile.in  news  readme  readme-alpha  thanks
id-utils-3.2d/CVS/: Entries  Repository
id-utils-3.2d/doc/: id-utils.hpj  id-utils.info  id-utils.rtf  id-utils.texi  makefile  makefile.am  makefile.in  stamp-vti
id-utils-3.2d/doc/CVS/: Entries  Repository
id-utils-3.2d/intl/: makefile
id-utils-3.2d/intl/CVS/: Entries  Repository
id-utils-3.2d/lib/: basename.c  dirname.c  error.c  error.h  getopt.c  getopt.h  getopt1.c  makefile  makefile.am  makefile.in  obstack.h  pathmax.h  regex.c  regex.h  strcasecmp.c  strcspn.c  xalloca.h  xdirent.h  xfnmatch.h  xmalloc.c  xmalloc.h  xobstack.h  xstddef.h  xstdlib.h  xsysstat.h  xunistd.h
id-utils-3.2d/lib/CVS/: Entries  Repository
id-utils-3.2d/libidu/: dynvec.c  dynvec.h  fnprint.c  hash.c  hash.h  id-lang.map  idfile.c  idfile.h  idread.c  idwrite.c  makefile  makefile.am  makefile.in  scanners.c  scanners.h  tokflags.h  walker.c  xnls.h
id-utils-3.2d/libidu/CVS/: Entries  Repository
id-utils-3.2d/lisp/: id-utils.el  makefile  makefile.am  makefile.in
id-utils-3.2d/lisp/CVS/: Entries  Repository
id-utils-3.2d/m4/: changelog  makefile  makefile.am  makefile.in
id-utils-3.2d/m4/CVS/: Entries  Repository
id-utils-3.2d/po/: cat-id-tbl.c  de.gmo  de.po  fr.gmo  fr.po  id-utils.pot  makefile  makefile.in  makefile.in.in  potfiles  potfiles.in
id-utils-3.2d/po/CVS/: Entries  Repository
id-utils-3.2d/src/: ansi2knr.c  fid.c  fnid.c  lid.c  makefile  makefile.am  makefile.in  mkid.c  xtokid.c
id-utils-3.2d/src/CVS/: Entries  Repository
id-utils-3.2d/testsuite/: consistency  makefile  makefile.am  makefile.in
id-utils-3.2d/testsuite/CVS/: Entries  Repository
indent-2.2.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  args.c  args.h  backup.c  backup.h  comments.c  comments.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  globs.c  globs.h  gperf.c  indent.1  indent.c  indent.gperf  indent.h  indent.hpj  indent.html  indent.ph  indent.rtf  indent.texi  io.c  io.h  lexi.c  lexi.h  maintMakefile  maintMakefile.in  parse.c  parse.h  stamp-vti  sys.h
indent-2.2.0/CVS/: Entries  Repository
sharutils-4.1/: .makefile.swp  acconfig.h  ansi2knr.1.htm  backlog  changelog  config.cache  config.h  config.h.in  config.status  configure  configure.in  encode.c  makefile  makefile.in  news  readme  shar.1  shar.1.htm  shar.c  sharutils.info  sharutils.texi  stamp-h  stamp-h.in  stamp-vti  system.h  testdata  thanks  todo  unshar.1  unshar.1.htm  unshar.c  uuencode.1  uuencode.1.htm  version.texi  whoami.c  xmalloc.c
sharutils-4.1/CVS/: Entries  Repository
sharutils-4.1/test/: getopt.c  getopt1.c  shar.c  triangle.shar  uudecode.c  uuencode.c
sharutils-4.1/test/CVS/: Entries  Repository
shellutils-1.9.4/: Makefile  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  makefile.in  readme  sh.exe.stackdump
shellutils-1.9.4/CVS/: Entries  Repository
shellutils-1.9.4/lib/: basename.c  getdate.c  getdate.y  makefile  makefile.in  posixtm.c  stripslash.c
shellutils-1.9.4/lib/CVS/: Entries  Repository
shellutils-1.9.4/man/: Makefile  basename.1  basename.htm  date.1  date.htm  dirname.1  dirname.htm  echo.htm  env.htm  expr.1  expr.htm  false.htm  groups.htm  id.htm  logname.htm  makefile.in  nice.htm  nohup.htm  pathchk.1  pathchk.htm  printenv.htm  printf.htm  shellutils.ps  sleep.htm  stty.htm  tee.htm  test.htm  true.htm  tty.1  uname.1  uname.htm  who.htm  whoami.htm  yes.htm
shellutils-1.9.4/man/CVS/: Entries  Repository
shellutils-1.9.4/src/: .version  Makefile  dirname.c  false  false.sh  groups  groups.sh  logname.c  long-options.c  makefile.in  nohup.sh  pathchk.c  stty.c  su.c  system.h  tee.c  test.c  true  true.sh  uname.c  version.c  who.c  whoami.c  wsstartup.c
shellutils-1.9.4/src/CVS/: Entries  Repository
textutils-2.1/src/: Makefile  Makefile.am  Makefile.in  ansi2knr.c  cksum.c  comm.c  csplit.c  cut.c  expand.c  fmt.c  fold.c  head.c  join.c  md5sum.c  nl.c  od.c  paste.c  pr.c  ptx.c  sort.c  split.c  sum.c  system.h  tac.c  tail.c  tsort.c  tt  tt1  tt2  unexpand.c  uniq.c  wc.c
which-2.4/: AUTHORS  ChangeLog  EXAMPLES  Makefile  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  bash.c  bash.h  config.h  config.h.in  config.status  configure  configure.in  getopt.c  mkinstalldirs  sys.h  which-2.spec  which.1  which.c  which.lsm  win32.txt
which-2.4/CVS/: Entries  Repository
(+1849 files in other folders)
