# Configure template for GNU shar utilities.
# Copyright (C) 1994 Free Software Foundation, Inc.
# Process this file with autoconf to produce a configure script.

# FIXME: AC_HAVE_HEADERS(sys/time.h)
# FIXME: AC_HAVE_FUNCS(gethostname getwd)

AC_INIT(shar.c)
AC_CONFIG_HEADER(config.h)
AC_ARG_PROGRAM

PRODUCT=sharutils
VERSION=4.1
PROGRAMS="shar unshar"
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)
AC_SUBST(PROGRAMS)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_C_CROSS
if test $cross_compiling = no; then
  AC_C_CHAR_UNSIGNED
fi
fp_C_PROTOTYPES
AC_C_CONST

AC_CHECK_HEADERS(limits.h memory.h string.h sys/wait.h unistd.h)
AC_HEADER_DIRENT
AC_HEADER_STAT
AC_HEADER_STDC
AC_STRUCT_TIMEZONE
AC_TYPE_SIZE_T

AC_CHECK_FUNCS(basename fchmod getcwd memcpy strchr strerror uname)
AC_FUNC_ALLOCA
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_REPLACE_FUNCS(memset mktime strftime)
test "$ac_cv_func_basename" = yes || LIBOBJS="$LIBOBJS basename.o"

AC_MSG_CHECKING(for /etc/systemid)
if test -f /etc/systemid; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_ETC_SYSTEMID)
else
  AC_MSG_RESULT(no)
fi

AC_MSG_CHECKING(if uuencode and uudecode are wanted)
AC_ARG_ENABLE(uucode,
[  --disable-uucode        disable installation of uuencode and uudecode],
[if test "$enableval" = yes; then
  AC_MSG_RESULT(yes)
  PROGRAMS="$PROGRAMS uudecode uuencode"
else
  AC_MSG_RESULT(no)
fi], [
  AC_MSG_RESULT(yes)
  PROGRAMS="$PROGRAMS uudecode uuencode"
])

fp_WITH_DMALLOC

AC_OUTPUT(Makefile,
[test -z "$CONFIG_HEADERS" || date > stamp-h])
